[package]
name = "multi-machine-dedup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
crc = "2.1.0"
rusqlite = { version = "0.26.3", features = ["bundled"] }
tree_magic_mini = { version = "3.0.3", features = ["with-gpl-data"] }
walkdir = "2.3.2"