[package]
name = "multi-machine-dedup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
crc = "3.0.0"
log = "0.4.17"
env_logger = "0.10.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
tree_magic_mini = { version = "3.0.3", features = ["with-gpl-data"] }
walkdir = "2.3.2"